# llama-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
llama_wrapper/: __init__.py  llama_wrapper.py  validator.py
llama_wrapper/tests/: __init__.py  test_llama_wrapper.py
src/: __init__.py  constants.py  data_types.py  llama_wrapper.py  main.py  validator.py
src/llama_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_llama_wrapper.py
