# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-wrapper"
version = "1.0.0"
description = "🦙 A Python module for interacting with the Meta Llama models trained via Replicate's API. 🔓"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "teloryfrozy" }]
requires-python = ">=3.9"
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
keywords = [
  "meta",
  "reverse-engineering",
  "replicate",
  "llm",
  "llama2",
  "llama3",
]

[project.urls]
Homepage = "https://github.com/teloryfrozy/llama-wrapper"
Issues = "https://github.com/teloryfrozy/llama-wrapper/issues"
PullRequests = "https://github.com/teloryfrozy/llama-wrapper/pulls"
