[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama_wrapper"
version = "1.0.2"
description = "🦙 A Python module for interacting with the Meta Llama models trained via Replicate's API. 🔓"
readme = "README.md"
license = { text = "Apache License 2.0" }
authors = [{ name = "teloryfrozy" }]
requires-python = ">=3.9"
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
keywords = [
  "meta",
  "reverse-engineering",
  "replicate",
  "llm",
  "llama2",
  "llama3",
]
dependencies = [
  "Brotli",
  "certifi",
  "charset-normalizer",
  "click",
  "idna",
  "joblib",
  "nltk",
  "regex",
  "requests",
  "tqdm",
  "urllib3",
  "colorama",
]

[project.urls]
Homepage = "https://github.com/teloryfrozy/llama-wrapper"
Issues = "https://github.com/teloryfrozy/llama-wrapper/issues"
PullRequests = "https://github.com/teloryfrozy/llama-wrapper/pulls"
